Avoiding menu item overflow to another column

--- a/css/widgets-menu.less
+++ b/css/widgets-menu.less
@@ -78,6 +78,8 @@
 		display: inline-block;
 		width: 33%;
 		vertical-align: top;
+		column-break-inside:avoid;
+
 		@media @bp-menu-compact {
 			margin-bottom: 40px;
 			width: 49%;
